Fixing fluid fonts. Fixing content meta updated time spacing.

--- a/dev/css/style.critical.css
+++ b/dev/css/style.critical.css
@@ -90,13 +90,13 @@ img {
   display: inline-block;
   margin: inherit auto; }
 html {
-  font-size: 12; }
+  font-size: 0.875em; }
   @media screen and (min-width: 20em) {
     html {
-      font-size: calc(12 + 4 * (100vw - 20em) / 41.25); } }
-  @media screen and (min-width: 61.25em) {
+      font-size: calc(0.875em + 0.125 * (100vw - 20em) / 55); } }
+  @media screen and (min-width: 75em) {
     html {
-      font-size: 16; } }
+      font-size: 1em; } }
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: #1c1c1c; }
@@ -278,6 +278,8 @@ pre {
 ._content__edit-link {
   clear: both;
   display: inline-block; }
+._content__meta-time + ._content__meta-time {
+  margin-left: 0.5rem; }
 [class*="format-aside"] ._content {
   display: flex;
   flex-wrap: wrap; }
