--- a/sass/_content/_elements.scss
+++ b/sass/_content/_elements.scss
@@ -23,3 +23,10 @@
     clear: both;
     display: inline-block;
 }
+
+._content__meta-time {
+    ._content__meta-time + & {
+        critical: this;
+        margin-left: $spacing-regular--half;
+    }
+}
